<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_today"
          android:title="@string/menu_today_label"
          android:icon="@drawable/ic_today"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_calendar"
          android:title="@string/menu_calendar_label"
          android:icon="@drawable/ic_calendar"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings_label"
          android:icon="@drawable/ic_settings"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_weight"
          android:title="@string/menu_weight_label"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_progress"
          android:title="@string/menu_progress_label"
          app:showAsAction="never"
        />
    <item android:id="@+id/menu_photo"
        android:title="@string/menu_photo_label"
        app:showAsAction="never"
        />
</menu>