<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.upenn.cis350.group1.calorietracker.SettingsActivity">

    <LinearLayout
        android:id="@+id/cal_goals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/daily_caloric_limit"
            android:gravity="center"
            android:textStyle="bold" />
        <EditText android:id="@+id/calorie_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prot_goals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/cal_goals">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/daily_protein_limit"
            android:gravity="center"
            android:textStyle="bold" />
        <EditText android:id="@+id/protein_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/carb_goals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/prot_goals">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/daily_carb_limit"
            android:gravity="center"
            android:textStyle="bold" />
        <EditText android:id="@+id/carb_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sodium_goals"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/carb_goals">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/daily_sodium_limit"
            android:gravity="center"
            android:textStyle="bold" />
        <EditText android:id="@+id/sodium_limit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:id="@+id/save_settings"
        android:layout_below="@+id/sodium_goals"
        android:onClick="saveSettings"/>

</RelativeLayout>
